# filebase-slow-upload-demo

./: .envrc  Readme.md  main.py  pyproject.toml
